--- a/zoo/public/css/app.css
+++ b/zoo/public/css/app.css
@@ -10945,15 +10945,15 @@ a.text-dark:focus {
 .list-line {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .list-line__buttons {
-  display: inline-block;
   display: flex;
 }
 
 .list-line__buttons > * {
-  margin: 5px;
+  margin: 15px;
 }
 
 
