--- a/zoo/resources/sass/custom.scss
+++ b/zoo/resources/sass/custom.scss
@@ -3,9 +3,20 @@
     justify-content: space-between;
     align-items: center;
     &__buttons{
-display: flex;
-&>*{
-    margin:15px;
+        display: flex;
+        &>*{
+            margin:15px;
+        }
+    }
 }
+
+.make-inline{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .check {
+        padding: 10px;
+        background-color: aqua;
     }
 }
